syntax = "proto3";

package email;

option go_package = "./email";

// Base message
message AddressMsg {
    int64   AddressId = 1;
    string  Street = 2;
    string  Suburb = 3;
    string  Postcode = 4;
    string  City = 5;
    string  StateCode = 6;
    string  Country = 7;
    string  Formatted = 8;
}

message CategoryMsg {
    int64   CategoryId = 1;
    string  CategoryAbbr = 2;
    string  CategoryName = 3;
    string  CategoryDescription = 4;
}

message CustomerMsg {
    int64  CustomerId = 1;
    string CustomerName = 2;
    int64  CustomerType = 3;
    string CountryCode = 4;
    string CustomerPhone = 5;
    string CustomerEmail = 6;
}

message OrderMsg {
    int64   OrderId = 1;
    double  DepositeAmount = 2;
    double  FinalAmount = 3;
    int32   DepositeRate = 4;
    double  GstAmount = 5;
    double  TotalAmount = 6;
    string  ReserveDate = 7;
}

message ServiceMsg {
    int64   ServiceId = 1;
    string  ServiceScope = 2;
    string  ServiceName = 3;
    string  ServiceDescription = 4;
    int32   ServiceQuantity = 5;
    double  ServicePrice = 6;
}

// Announcement email
message AnnouncementRequest {

}
message AnnouncementResponse {
    int32  Code = 1;
    string Msg = 2;
    string Data = 3;
}

// General reminder email
message GeneralEmailRequest {
    string target = 1;
    string subject = 2;
    string content = 3;
}
message GeneralEmailResponse {
    int32 Code = 1;
    string Msg = 2;
    string Data = 3;
}

// Send invoice email
message InvoiceEmailRequest {
    AddressMsg           AddressInfo = 1;
    CategoryMsg          CategoryInfo = 2;
    CustomerMsg          CustomerInfo = 3;
    repeated ServiceMsg  ServiceInfo = 4;
    OrderMsg             OrderInfo = 5;
}
message InvoiceEmailResponse {
    int32 Code = 1;
    string Msg = 2;
    string Data = 3;
}

service Email {
    rpc Announcement(AnnouncementRequest) returns(AnnouncementResponse);
    rpc InvoiceEmail(InvoiceEmailRequest) returns(InvoiceEmailResponse);
    rpc GeneralEmail(GeneralEmailRequest) returns(GeneralEmailResponse);
}